k8s/legal-summarizer.microsoft-office-addin.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legal-summarizer
  labels:
    tier: legal-summarizer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      tier: legal-summarizer
  template:
    metadata:
      labels:
        tier: legal-summarizer
    spec:
      containers:
        - name: legal-summarizer
          image: nginx:1.24.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/nginx/templates
              name: nginx-templates
            - name: data
              mountPath: "/home"

      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: legal-summarizer
        - name: nginx-templates
          configMap:
            name: nginx-templates
---
# legal-summarizer SERVICES
apiVersion: v1
kind: Service
metadata:
  name: legal-summarizer-service
spec:
  selector:
    tier: legal-summarizer
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: public
